app.html removed duplicate ids

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -31,7 +31,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">New Instance</h4>
+        <h4 class="modal-title" id="myInstModalLabel">New Instance</h4>
       </div>
       <div class="modal-body">
         <h3 class="modal-title">New Application Instance</h3>
@@ -209,7 +209,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
             class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel"> {{currModalStatus.pxname}}: {{currModalStatus.svname}}</h4>
+        <h4 class="modal-title" id="modalAppInstDetailsLabel"> {{currModalStatus.pxname}}: {{currModalStatus.svname}}</h4>
       </div>
       <div class="modal-body">
 
