Added icons to the buttons on the app page. Also started implementing a combined view for all loadbalancers

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -13,13 +13,13 @@
     </ul>
   </li>
 
-  <button class="btn btn-info" data-toggle="modal" data-target="#myModal">Edit Application</button>
+  <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-tag"></span>  Edit Application</button>
 
   <button type="button" class="btn btn-danger" ng-click="removeApp()"><span class="glyphicon glyphicon-trash"></span>
     Delete Application
   </button>
 
-  <button class="btn btn-info" data-toggle="modal" data-target="#myInstModal">Create Instance</button>
+  <button class="btn btn-info" data-toggle="modal" data-target="#myInstModal"><span class="glyphicon glyphicon-plus"></span>  Create Instance</button>
 
 </ul>
 
