--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -81,6 +81,9 @@
 
 
     <div class="list-group">
+      <a href="#/allLb/" class="list-group-item">
+      <b>All LoadBalancers</b>
+      </a>
       <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in allLBs">
         <b> {{lb.name}}</b> {{lb.installationPath}} {{lb.sshKey}} ({{lb.id}})
       </a>
