--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -1,17 +1,44 @@
 <h1>Load Balancer : {{lb.name}}
     <small>({{lb.id}})</small>
 </h1>
+<div class="row">
+    <div class="col-sm-4">
+        <div class="panel panel-primary">
+            <!-- Default panel contents -->
+            <div class="panel-heading">{{lb.name}}
+                <a data-target="#myModal" data-toggle="modal">
+                    <span class="glyphicon glyphicon-cog white pull-right"></span>
+                </a>
+
+            </div>
+            <div class="panel-body">
+
+                <ul class="list-unstyled">
+                    <li>InstallationPath : {{lb.installationPath}}</li>
+                    <li>Host : {{lb.host}}</li>
+                    <li>Port : {{lb.publicPort}}</li>
+                    <li>SSH key : {{lb.sshKey}}</li>
+                    <li>Number of applications : {{lb.applications.length}}</li>
+                    <li>Stats page : <a href="http://{{lb.host}}:{{lb.publicPort+1}}/proxy-stats">{{lb.host}}:{{lb.publicPort+1}}/proxy-stats</a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- Table -->
+            <table class="table">
+
+            </table>
+        </div>
+
+    </div>
+    <div class="col-sm-8">
 
 
-<ul class="list-unstyled">
-    <li>InstallationPath : {{lb.installationPath}}</li>
-    <li>Host : {{lb.host}}</li>
-    <li>Port : {{lb.publicPort}}</li>
-    <li>sshKey : {{lb.sshKey}}</li>
-    <li>Number of applications : {{lb.applications.length}}</li>
-    <li>Stats page : <a href="http://{{lb.host}}:{{lb.publicPort+1}}/proxy-stats">{{lb.host}}:{{lb.publicPort+1}}/proxy-stats</a>
-    </li>
-</ul>
+    </div>
+</div>
+
+
 <!-- Button trigger modal -->
 <button class="btn btn-info" data-toggle="modal" data-target="#myModal">
     Edit
@@ -23,7 +50,6 @@
 </div>
 
 <hr>
-
 <div class="row">
     <div class="col-sm-8">
         <h3>Status: <span class="text-success" ng-show="rawStatus">HAproxy is running
@@ -37,8 +63,7 @@
     <div class="col-sm-4">
 
         <a class="btn pull-right" ng-class="{true: 'btn-primary', false: 'btn-success'}[!autoRefresh]"
-           ng-click="startStopAutoRefresh()">AutoRefresh is {{!autoRefresh&& 'off' || 'on'}} </a>
-
+           ng-click="startStopAutoRefresh()">Turn {{!autoRefresh&& 'on' || 'off'}} autorefresh</a>
 
 
     </div>
