--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -43,6 +43,15 @@
             z-index: 10000;
 
         }
+
+        .white {
+            color: white;
+        }
+        a.whitelink:link { color: white; }
+        a.whitelink:visited { color: white; }
+        a.whitelink:hover { color: white; }
+
+
     </style>
 
     <title>Gateway</title>
@@ -82,29 +91,31 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div  class="alert-messages" >
+<div class="alert-messages">
     <div class="container">
-        <div class="row"  >
+        <div class="row">
 
             <div class="col-md-6 col-md-offset-6">
 
                 <div class="alert alert-danger alert-dismissible" id="messageDisplay" style="display:none">
 
-                    <button type="button" class="close" onclick="$('#messageDisplay').hide()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button type="button" class="close" onclick="$('#messageDisplay').hide()"><span
+                            aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <span id="MessageDisplayText">asdasda sada sda sdassssssssssssssssssssssss aaa  </span>
                 </div>
 
                 <div class="alert alert-success alert-dismissible" id="messageDisplaySuccess" style="display:none">
 
-                    <button type="button" class="close" onclick="$('#messageDisplaySuccess').hide()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button type="button" class="close" onclick="$('#messageDisplaySuccess').hide()"><span
+                            aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <span id="MessageDisplaySuccessText">aa</span>
                 </div>
 
 
-
             </div>
         </div>
-    </div>    </div>
+    </div>
+</div>
 
 <div class="container">
 
