Added page for combined view for all loadbalancers as it was removed in the last pull

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -100,10 +100,13 @@
 
     <div class="col-sm-6">
 
-        <h3>All Load Balancers</h3>
+        <h3>Load Balancers</h3>
 
 
         <div class="list-group">
+          <a href="#/allLb" class="list-group-item" >
+            <b>All Load Balancers</b>
+          </a>
             <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in allLBs">
                 <b> {{lb.name}}</b> {{lb.installationPath}} {{lb.sshKey}} ({{lb.id}})
             </a>
