--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -13,10 +13,10 @@
     </li>
     <ul ng-show="!rawStatusForOneInst">No loadbalancers associated with this application instance
     </ul>
-    <button class="btn btn-info" data-toggle="modal" data-target="#myModal">
+    <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-tag"></span>
       Edit
     </button>
-    <button type="button" class="btn btn-danger" ng-click="deleteAppInst()">Delete</button>
+    <button type="button" class="btn btn-danger" ng-click="deleteAppInst()"><span class="glyphicon glyphicon-trash"></span>  Delete</button>
 
   </ul>
 </div>
