--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -1,4 +1,4 @@
-<h1>Gateway</h1>
+
 
 <div class="row">
 
@@ -41,26 +41,46 @@
                         </a>
                     </div>
 
-
+                    <p ng-hide="appGroup.applications.length">No applications</p>
                 </div>
             </div>
         </div>
 
     </div>
 
+    <div class="panel-group" id="accordion2">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        <span class="glyphicon glyphicon-plus "></span> New Application Group
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <form role="form" ng-submit="createApplicationGroup()" name="createAppGroupForm">
 
-    <h3>New Application Group </h3>
+                        <div class="form-group">
+                            <label for="inAppGroupName">Name</label>
+                            <input type="text" ng-model="appGroup.name" class="form-control" id="inAppGroupName"
+                                   name="name"
+                                   required
+                                   placeholder="Enter application group name">
+                        </div>
+                        <button type="submit" class="btn btn-primary" ng-disabled="createAppGroupForm.$invalid">Create
+                        </button>
+                    </form>
 
-    <form role="form" ng-submit="createApplicationGroup()" name="createAppGroupForm">
 
-        <div class="form-group">
-            <label for="inAppGroupName">Name</label>
-            <input type="text" ng-model="appGroup.name" class="form-control" id="inAppGroupName" name="name"
-                   required
-                   placeholder="Enter application group name">
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary" ng-disabled="createAppGroupForm.$invalid">Create</button>
-    </form>
+
+
+    </div>
+
+
 
     <a href="" ng-model="collapsedGroup" ng-click="collapsedGroup=!collapsedGroup"><strong>Toggle
         (show/hide)</strong> json data</a>
@@ -88,9 +108,9 @@
 
 
         <div class="list-group">
-          <a href="#/allLb" class="list-group-item" >
-            <b>All Load Balancers </b>
-          </a>
+            <a href="#/allLb" class="list-group-item">
+                <b>All Load Balancers </b>
+            </a>
             <a href="#/lb/{{lb.id}}" class="list-group-item" ng-repeat="lb in allLBs">
                 <b> {{lb.name}}</b> {{lb.installationPath}} {{lb.sshKey}} ({{lb.id}})
             </a>
@@ -120,10 +140,9 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
                         class="sr-only">Close</span></button>
-                <h4 class="modal-title" id=modalCreateAppLabel">  New application to {{currAppGroupSelected.name}}</h4>
+                <h4 class="modal-title" id=modalCreateAppLabel"> New application to {{currAppGroupSelected.name}}</h4>
             </div>
             <div class="modal-body">
-
 
 
                 <form role="form" ng-submit="createApplication()" name="createAppForm" novalidate>
@@ -153,7 +172,8 @@
                     </div>
                     <div class="form-group">
                         <label for="inAppCheckPath">Check path</label>
-                        <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath" name="checkpath"
+                        <input type="text" ng-model="newApp.checkPath" class="form-control " id="inAppCheckPath"
+                               name="checkpath"
                                ng-pattern="/^/[a-zA-Z]+\S*$/"
                                required
                                placeholder="Enter check path">
