--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -99,7 +99,7 @@
 
           <div class="form-group" ng-class="{'has-error': editAppForm.name.$invalid && editAppForm.name.$dirty}">
             <label for="inAppName">Name</label>
-            <input type="text" ng-model="app.name" class="form-control" id="inAppName" name="name" ng-pattern="/^\S+$/" required/>
+            <input type="text" ng-model="newApp.name" class="form-control" id="inAppName" name="name" ng-pattern="/^\S+$/" required/>
             <span class="bg-danger" ng-show="editAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
           </div>
 
@@ -201,7 +201,7 @@
 </div>
 
 
-<!-- Modal -->
+<!-- Modal Server /App instance details-->
 <div class="modal fade bs-example-modal-lg" id="modalAppInstDetails" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
