not showing nan

--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -95,7 +95,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -121,7 +121,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -150,7 +150,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -178,7 +178,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -202,7 +202,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -228,7 +228,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -253,7 +253,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
@@ -284,7 +284,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="(lbId,value) in rawStatusForOneInst"
-        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger','':'active'}[value.data.status]">
+        ng-class="{OPEN:'info', UP:'success', MAINT:'warning', DOWN:'danger', offline:'danger','':'active'}[value.data.status]">
       <td>{{lbId}}</td>
       <td>{{value.data.pxname}}</td>
       <td>{{value.data.svname}}</td>
